update- time travel functions

--- a/Data Engineering.ipynb
+++ b/Data Engineering.ipynb
@@ -96,6 +96,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3f00acdb-6327-4f9f-b364-034a7154405c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "The cell above is a dataframe to create a schema and load data from the external storage (Adlsgen2) which is in json file before.\n",
+    "then read the data in a csv foramt , then display the content of the file \n",
+    "\n",
+    "NOTE : the content is not save yet you are just reading or viewing the file content , because json file content are not structure like csv file "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -115,6 +134,515 @@
    "source": [
     "display (flight_time_dt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "dfc30654-9ed1-4cbb-a9a0-57f89ec3f18c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "CREATE TABLE IF NOT EXISTS dev.demo_db.flight_time_tbl (\n",
+    "    FL_DATE DATE, \n",
+    "    OP_CARRIER STRING, \n",
+    "    OP_CARRIER_FL_NUM INT, \n",
+    "    ORIGIN STRING, \n",
+    "    ORIGIN_CITY_NAME STRING, \n",
+    "    DEST STRING, \n",
+    "    DEST_CITY_NAME STRING, \n",
+    "    CRS_DEP_TIME INT, \n",
+    "    DEP_TIME INT, \n",
+    "    WHEELS_ON INT, \n",
+    "    TAXI_IN INT, \n",
+    "    CRS_ARR_TIME INT, \n",
+    "    ARR_TIME INT, \n",
+    "    CANCELLED STRING, \n",
+    "    DISTANCE INT\n",
+    ") USING DELTA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "214db234-ce76-4272-9dbe-94c784d042d8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "flight_time_dt.write.format(\"delta\").mode(\"append\").saveAsTable(\"dev.demo_db.flight_time_tbl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e51315bf-5b05-417c-b6ea-68314057be98",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "flight_time_tbl = spark.read.table(\"dev.demo_db.flight_time_tbl\")\n",
+    "display(flight_time_tbl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "cf605347-ea8d-4feb-9731-eae6aa25d7d3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "select * from dev.demo_db.flight_time_tbl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4149a497-b46d-4953-afd7-47f6c3ee2b42",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Save delta table in External Location (ADLSgen2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "700c3791-d0b2-41e3-a6ff-cfe8d8af72a6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "(flight_time_dt.coalesce(1).write.format(\"delta\").mode(\"overwrite\").save(\"abfss://dbfs-container@azuredatabrickstorages.dfs.core.windows.net/external/flight-time/Folex\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2a0f19a4-204b-4bf1-b3c3-ae13f29f04a3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    },
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "LOAD THE PEOPLE JSON FILE INTO THE DATAFRAME AND REVIEW/ READ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f73aeab1-8c88-4701-a6ab-e01c38b73a58",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "people_df = (spark.read.format(\"json\").load(\"abfss://dbfs-container@azuredatabrickstorages.dfs.core.windows.net/external/people.json\"))\n",
+    "display (people_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f5097689-0fa8-4dbb-a851-67b5da0ad161",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "WRITE / SAVE THE PEOPLE DATA INTO THE DEV CATALOG USING PYTHON SCRIPT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2b1169ea-168e-4fb4-8f31-ac2e13464dcb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "people_df.write.format(\"delta\").mode(\"overwrite\").saveAsTable(\"dev.demo_db.people\")\n",
+    "\n",
+    "## read table \n",
+    "people = spark.read.table(\"dev.demo_db.people\")\n",
+    "display (people)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "ad848410-ba7d-4755-ae7a-5240484f349e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "LET LEARN HOW TO DELETE RECORD FROM THE CATALOG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2360046a-f480-4a36-97e7-9b31667c5b28",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "DELETE FROM DEV.DEMO_DB.PEOPLE\n",
+    "WHERE ID = 102;\n",
+    "\n",
+    "select * from dev.demo_db.people"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "399cdab3-d607-47d3-b58b-e0eafb6cf081",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "LET LEARN HOW TO UPDATE USING SQL SYNTANX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "93191330-b5d9-45b8-9e01-eee9d1ba75b2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "update dev.demo_db.people\n",
+    "set dob = '1985-05-25'\n",
+    "where dob = '1975-05-25';\n",
+    "\n",
+    "select * from dev.demo_db.people"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "26b2a128-0268-411f-a58c-7cc7f5d2d9d8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "LET LOOK AT TIME TRAVEL\n",
+    "WHICH HELP US TO SEE HISTORY OF WHAT WE HAVE BEEN DOING IN THE PAST AND WE CAN REVERT/RESTORE TO PREVIOUS VERSION "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2b1c4785-2685-40b2-8518-9a84dc6c00a1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "describe history dev.demo_db.people;\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f664711d-aebf-4ff8-8545-8dccf3400c53",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "select * from dev.demo_db.people version as of 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "0ec9bf23-901d-4265-b384-b4e833fee6d2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "select * from dev.demo_db.people \n",
+    "timestamp as of '2025-06-24T04:18:27.000+00:00'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "542a106e-3a61-4877-917f-342490f2cf6a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "DELET THE DELTA TABLE BY MISTAKE \n",
+    "let assusume you mistakenly delete the entire record in your table and you want to restore back to previous record "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "59dafbf2-1b1e-49e4-b8ee-a0b168f26c0d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "\n",
+    "delete from dev.demo_db.people;\n",
+    "\n",
+    "select * from dev.demo_db.people"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "e207529a-22f9-4a0b-8879-0334f6e0a95b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "ROLL BACK TO RESTORE TO PREVIOUS HISTORY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8b3b4fa4-68b2-4524-b3b6-5060a20d5811",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "describe history dev.demo_db.people"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "654b79bf-3282-434d-ac22-f78e56ef83f7",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "restore table dev.demo_db.people to timestamp as of '2025-06-24T04:47:32.000+00:00';\n",
+    "\n",
+    "select * from dev.demo_db.people"
+   ]
   }
  ],
  "metadata": {
@@ -129,7 +657,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 6775761553828421,
+     "commandId": 6770288505513035,
      "dataframes": [
       "_sqldf"
      ]
